# 2019yandiansai

./: README.md
ROS/VO/src_ros/: ros_mono.cc
ROS/detection/: CMakeLists.txt  package.xml
ROS/detection/include/: detector.h
ROS/detection/launch/: detection.launch
ROS/detection/src/: detector.cpp  main.cpp
ROS/event/: CMakeLists.txt  package.xml
ROS/event/Samples/lib/Windows/x64/debug/: CeleX.lib
ROS/event/Samples/lib/Windows/x64/release/: CeleX.lib
ROS/event/launch/: event.launch
ROS/event/src/: main.cpp
ROS/frame/: CMakeLists.txt  package.xml
ROS/frame/launch/: frame.launch
ROS/frame/src/: main.cpp
ROS/img_fusion/: CMakeLists.txt  package.xml
ROS/img_fusion/launch/: img_fusion.launch
ROS/img_fusion/src/: main.cpp
ROS/img_registration/: CMakeLists.txt  package.xml
ROS/img_registration/launch/: img_registration.launch
ROS/img_registration/src/: main.cpp
ROS/infrared/: CMakeLists.txt  package.xml
ROS/infrared/launch/: infrared.launch
ROS/infrared/src/: main.cpp
ROS/raw_event_confirm/: CMakeLists.txt  package.xml
ROS/raw_event_confirm/src/: README.md  main.cpp
ROS/track/: CMakeLists.txt  package.xml
ROS/track/launch/: track.launch
ROS/track/params/: track_params.yaml
ROS/track/src/: main.cpp
ROS/ugv_control/: CMakeLists.txt  package.xml
ROS/ugv_control/include/: path.h  ugvdriver.h
ROS/ugv_control/launch/: goal_test.launch  keyboardcontrol.launch  odometry.launch  path.launch  slam_navigation.launch  ugvdriver.launch  velodyne.launch
ROS/ugv_control/maps/: gmapping-001.yaml  gmapping-002.yaml
ROS/ugv_control/params/slam_navigation/: base_local_planner_params.yaml
ROS/ugv_control/rviz/: odometry.rviz  slam_navigation.rviz
ROS/ugv_control/src/: path.cpp  path_node.cpp  serialtransmission.cpp  ugvdriver.cpp
STM32/UGV/USER/: JLinkLog.txt  LED.uvguix.lihao  LED.uvoptx  LED.uvprojx  bsp_imu.c  bsp_imu.h  callback.c  chassis_task.c  imu_task.c  imu_task.h  main.c  mpu6500_reg.h  pid.c  spi.c  spi.h  usart2.h  usart6.h
